# xodex

./: .env.example  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM_PROMPT_EXAMPLE.md  Dockerfile  LICENSE  README.md  SECURITY.md  publish.sh  pyproject.toml  release.sh  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish-npm.yml  release-binaries.yml
assets/: xodex_ascii_logo.txt
js-wrapper/: README.md  index.js  package.json
src/: config.py  main.py  repl.py
src/core/: agent.py  context.py
src/prompts/: system.py
src/providers/: gemini_provider.py  grok_provider.py  openai_provider.py
src/xodex/: __init__.py  __main__.py  config.py  config_store.py  main.py  repl.py  setup.py
src/xodex/core/: agent.py  context.py  tools.py  typing.py
src/xodex/prompts/: system.py  xodex-cli.txt
src/xodex/providers/: deepseek_provider.py  gemini_provider.py  grok_provider.py  openai_provider.py
tests/: __init__.py  test_basic.py
xodex/: main.py  repl.py
xodex/core/: agent.py  context.py
xodex/providers/: deepseek_provider.py  gemini_provider.py  grok_provider.py  openai_provider.py
